fixing white space at the bottom

--- a/about/_about.scss
+++ b/about/_about.scss
@@ -157,7 +157,7 @@ main .wrapper {
 /* Portrait tablet and small desktops */
 @media (max-width: 940px) {
   html {
-    overflow-x: hidden;
+    overflow: hidden;
   }
 
   main .wrapper {
